// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main snapshot renders 1`] = `
<div>
  <div>
    <WithStyles(PreviewPrompt) />
  </div>
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    toggled={false}
  />
  <Component
    onChange={[MockFunction]}
    selectedTokens={
      Array [
        Object {
          "end": 1,
          "start": 0,
          "text": "f",
        },
      ]
    }
    tokens={
      Array [
        Object {
          "end": 1,
          "start": 0,
          "text": "f",
        },
      ]
    }
  />
</div>
`;

exports[`main snapshot renders rationale 1`] = `
<div>
  <div>
    <WithStyles(PreviewPrompt) />
  </div>
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    toggled={false}
  />
  <Component
    onChange={[MockFunction]}
    selectedTokens={
      Array [
        Object {
          "end": 1,
          "start": 0,
          "text": "f",
        },
      ]
    }
    tokens={
      Array [
        Object {
          "end": 1,
          "start": 0,
          "text": "f",
        },
      ]
    }
  />
</div>
`;

exports[`main snapshot renders showCorrect 1`] = `
<div>
  <div>
    <WithStyles(PreviewPrompt) />
  </div>
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    toggled={true}
  />
  <Component
    onChange={[MockFunction]}
    selectedTokens={Array []}
    tokens={
      Array [
        Object {
          "end": 1,
          "start": 0,
          "text": "f",
        },
      ]
    }
  />
</div>
`;
